--- a/app/src/main/res/layout-land/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout-land/activity_hot_cold_page.xml
@@ -47,7 +47,7 @@
                             app:layout_constraintVertical_bias="0.0" />
 
                         <TextView
-                            android:id="@+id/tvcname"
+                            android:id="@+id/hot_cold_name"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
                             android:gravity="center"
@@ -65,13 +65,13 @@
                             android:layout_width="100dp"
                             android:layout_height="100dp"
                             android:layout_marginEnd="90dp"
-                            app:layout_constraintEnd_toStartOf="@+id/textView5"
-                            app:layout_constraintTop_toTopOf="@+id/textView5"
+                            app:layout_constraintEnd_toStartOf="@+id/tv_Hot_Cold_ryu"
+                            app:layout_constraintTop_toTopOf="@+id/tv_Hot_Cold_ryu"
                             app:srcCompat="@drawable/casher" />
 
 
                         <TextView
-                            android:id="@+id/textView5"
+                            android:id="@+id/tv_Hot_Cold_ryu"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
@@ -82,7 +82,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.499"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/tvcname" />
+                            app:layout_constraintTop_toBottomOf="@+id/hot_cold_name" />
 
                         <TextView
                             android:id="@+id/textView6"
@@ -92,9 +92,9 @@
                             android:textColor="#504E4E"
                             android:textSize="46sp"
                             android:textStyle="bold"
-                            app:layout_constraintEnd_toEndOf="@+id/textView5"
-                            app:layout_constraintStart_toStartOf="@+id/textView5"
-                            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                            app:layout_constraintEnd_toEndOf="@+id/tv_Hot_Cold_ryu"
+                            app:layout_constraintStart_toStartOf="@+id/tv_Hot_Cold_ryu"
+                            app:layout_constraintTop_toBottomOf="@+id/tv_Hot_Cold_ryu" />
 
                         <ImageView
                             android:id="@+id/imageView13"
@@ -136,8 +136,8 @@
                             android:layout_marginTop="11dp"
                             android:backgroundTint="#00FFFFFF"
                             app:layout_constraintBottom_toTopOf="@+id/textView"
-                            app:layout_constraintStart_toEndOf="@+id/tvcname"
-                            app:layout_constraintTop_toTopOf="@+id/tvcname"
+                            app:layout_constraintStart_toEndOf="@+id/hot_cold_name"
+                            app:layout_constraintTop_toTopOf="@+id/hot_cold_name"
                             app:srcCompat="@drawable/shoppingcart" />
 
                         <!-- 뚜껑 끝 -->
