--- a/app/src/main/res/layout-land/activity_check_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_check_menu_page.xml
@@ -47,7 +47,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/ch"
+                android:id="@+id/check_tv1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -60,19 +60,19 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <TextView
-                android:id="@+id/textView67"
+                android:id="@+id/check_menu_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="아메리카노"
                 android:textColor="#504E4E"
                 android:textSize="46sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/ch"
-                app:layout_constraintStart_toEndOf="@+id/ch"
-                app:layout_constraintTop_toTopOf="@+id/ch" />
+                app:layout_constraintBottom_toBottomOf="@+id/check_tv1"
+                app:layout_constraintStart_toEndOf="@+id/check_tv1"
+                app:layout_constraintTop_toTopOf="@+id/check_tv1" />
 
             <TextView
-                android:id="@+id/tvcname"
+                android:id="@+id/small_menu_name"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
@@ -105,7 +105,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ch" />
+                app:layout_constraintTop_toBottomOf="@+id/check_tv1" />
 
             <ImageView
                 android:id="@+id/imageView13"
@@ -140,8 +140,8 @@
                 android:layout_marginTop="11dp"
                 android:backgroundTint="#00FFFFFF"
                 app:layout_constraintBottom_toTopOf="@+id/textView"
-                app:layout_constraintStart_toEndOf="@+id/tvcname"
-                app:layout_constraintTop_toTopOf="@+id/tvcname"
+                app:layout_constraintStart_toEndOf="@+id/small_menu_name"
+                app:layout_constraintTop_toTopOf="@+id/small_menu_name"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <!-- 뚜껑 끝 -->
@@ -174,7 +174,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/check_menu_img"
                 android:layout_width="602dp"
                 android:layout_height="392dp"
                 android:layout_marginStart="16dp"
@@ -184,7 +184,7 @@
                 app:srcCompat="@drawable/coffee1" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/check_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="240dp"
@@ -193,20 +193,20 @@
                 android:textSize="50sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView16"
+                app:layout_constraintStart_toEndOf="@+id/check_menu_img"
                 app:layout_constraintTop_toTopOf="@+id/textView4"
                 app:layout_constraintVertical_bias="0.496" />
 
             <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/check_tv2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="상태 : 차갑게"
                 android:textColor="#FFFFFF"
                 android:textSize="50dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView7"
-                app:layout_constraintStart_toStartOf="@+id/textView7"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                app:layout_constraintEnd_toEndOf="@+id/check_menu"
+                app:layout_constraintStart_toStartOf="@+id/check_menu"
+                app:layout_constraintTop_toBottomOf="@+id/check_menu" />
 
             <TextView
                 android:id="@+id/textView19"
@@ -215,9 +215,9 @@
                 android:text="수량 : "
                 android:textColor="#FFFFFF"
                 android:textSize="50dp"
-                app:layout_constraintEnd_toEndOf="@+id/textView18"
-                app:layout_constraintStart_toStartOf="@+id/textView18"
-                app:layout_constraintTop_toBottomOf="@+id/textView18" />
+                app:layout_constraintEnd_toEndOf="@+id/check_tv2"
+                app:layout_constraintStart_toStartOf="@+id/check_tv2"
+                app:layout_constraintTop_toBottomOf="@+id/check_tv2" />
 
             <TextView
                 android:id="@+id/textView48"
@@ -231,7 +231,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/check_menu_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="장바구니 확인"
@@ -247,8 +247,8 @@
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textView6"
-                app:layout_constraintStart_toEndOf="@+id/textView67"
-                app:layout_constraintTop_toTopOf="@+id/textView67" />
+                app:layout_constraintStart_toEndOf="@+id/check_menu_menu"
+                app:layout_constraintTop_toTopOf="@+id/check_menu_menu" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
