--- a/app/src/main/res/layout/activity_choice_mode_page.xml
+++ b/app/src/main/res/layout/activity_choice_mode_page.xml
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_Manage_main_page" />
 
     <TextView
-        android:id="@+id/tvcname"
+        android:id="@+id/small_menu_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -91,7 +91,7 @@
         android:textColor="#504E4E"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tvcname"
+        app:layout_constraintBottom_toTopOf="@+id/small_menu_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
