--- a/app/src/main/res/layout/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout/activity_sales_condition_page.xml
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toTopOf="@+id/btn_User_info_page1" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_Hot_Cold_ryu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
