--- a/app/src/main/res/layout/activity_small_menu_page.xml
+++ b/app/src/main/res/layout/activity_small_menu_page.xml
@@ -76,7 +76,7 @@
         app:srcCompat="@drawable/casher" />
 
     <TextView
-        android:id="@+id/tvcname"
+        android:id="@+id/small_menu_name"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
