--- a/app/src/main/res/layout-land/activity_hot_cold_page.xml
+++ b/app/src/main/res/layout-land/activity_hot_cold_page.xml
@@ -47,7 +47,7 @@
                             app:layout_constraintVertical_bias="0.0" />
 
                         <TextView
-                            android:id="@+id/tvcname"
+                            android:id="@+id/main_menu_name"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
                             android:gravity="center"
@@ -68,12 +68,12 @@
                             android:layout_marginEnd="10dp"
                             app:layout_constraintBottom_toBottomOf="@+id/textView6"
                             app:layout_constraintEnd_toStartOf="@+id/textView6"
-                            app:layout_constraintTop_toTopOf="@+id/textView5"
+                            app:layout_constraintTop_toTopOf="@+id/tv_Hot_Cold_ryu"
                             app:layout_constraintVertical_bias="0.0"
                             app:srcCompat="@drawable/casher" />
 
                         <TextView
-                            android:id="@+id/textView5"
+                            android:id="@+id/tv_Hot_Cold_ryu"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="아메리카노를 선택하셨습니다."
