--- a/app/src/main/res/layout/activity_menu_vo.xml
+++ b/app/src/main/res/layout/activity_menu_vo.xml
@@ -7,7 +7,7 @@
     tools:context=".MenuVO">
 
     <TextView
-        android:id="@+id/check_menu"
+        android:id="@+id/tv_Hot_Cold_ryu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
