--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/main_menu_name"
+                android:id="@+id/small_menu_name"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
