--- a/app/src/main/res/layout-land/activity_cart_page.xml
+++ b/app/src/main/res/layout-land/activity_cart_page.xml
@@ -7,16 +7,6 @@
     android:backgroundTint="#FFFFFF"
     tools:context=".Main_menu_page">
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
 
         <!-- 뚜껑 시작 -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -142,8 +132,7 @@
                 android:textColor="#504E4E"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3"
-                app:layout_constraintTop_toTopOf="@+id/tvcname2" />
+                app:layout_constraintEnd_toStartOf="@+id/btn_cart_page3" />
 
 
             <TextView
@@ -155,8 +144,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.562"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvcname2" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/textView19"
@@ -191,5 +179,4 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
