--- a/app/src/main/res/layout-land/activity_cart_page.xml
+++ b/app/src/main/res/layout-land/activity_cart_page.xml
@@ -114,15 +114,15 @@
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="#00FFFFFF"
-                app:layout_constraintBottom_toBottomOf="@+id/button7"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Choice_mode_page"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/button7"
+                app:layout_constraintTop_toTopOf="@+id/btn_Choice_mode_page"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <!-- 뚜껑 끝 -->
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/btn_Choice_mode_page"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
@@ -139,43 +139,73 @@
                 android:id="@+id/textView4"
                 android:layout_width="1200dp"
                 android:layout_height="450dp"
-                android:layout_marginTop="160dp"
                 android:background="#FF5555"
                 app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.562"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintHorizontal_bias="0.625"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="400dp"
                 android:layout_height="400dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="16dp"
                 android:background="#FFFFFF"
-                android:text="시간이 너무 빠르게 지난다."
                 android:textSize="40sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView4"
                 app:layout_constraintEnd_toEndOf="@+id/textView4"
-                app:layout_constraintTop_toTopOf="@+id/textView4"
-                android:fontFamily="@font/"/>
-
-            <TextView
-                android:id="@+id/textView28"
-                android:layout_width="344dp"
-                android:layout_height="317dp"
-                android:layout_marginStart="20dp"
-                android:background="#F6ABAB"
-                app:layout_constraintStart_toStartOf="@+id/textView4"
-                tools:layout_editor_absoluteY="278dp"
-                android:fontFamily="@font/nanumsquareneo_variable"/>
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
 
             <TextView
                 android:id="@+id/textView29"
-                android:layout_width="344dp"
-                android:layout_height="317dp"
-                android:background="#F6ABAB"
-                tools:layout_editor_absoluteX="445dp"
-                tools:layout_editor_absoluteY="278dp" />
+                android:layout_width="360dp"
+                android:layout_height="330dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="80dp"
+                android:background="#FBD7D7"
+                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/textView4"
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+            <TextView
+                android:id="@+id/textView30"
+                android:layout_width="360dp"
+                android:layout_height="330dp"
+                android:layout_marginStart="16dp"
+                android:background="#FBD7D7"
+                app:layout_constraintStart_toEndOf="@+id/textView29"
+                app:layout_constraintTop_toTopOf="@+id/textView29" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:backgroundTint="#FBD7D7"
+                android:text="다음 페이지▶"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/textView30"
+                app:layout_constraintTop_toBottomOf="@+id/textView30" />
+
+            <!--            <TextView-->
+<!--                android:id="@+id/textView28"-->
+<!--                android:layout_width="344dp"-->
+<!--                android:layout_height="317dp"-->
+<!--                android:layout_marginStart="20dp"-->
+<!--                android:background="#F6ABAB"-->
+<!--                app:layout_constraintStart_toStartOf="@+id/textView4"-->
+<!--                tools:layout_editor_absoluteY="278dp"-->
+<!--                android:fontFamily="@font/nanumsquareneo_variable"/>-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView29"-->
+<!--                android:layout_width="344dp"-->
+<!--                android:layout_height="317dp"-->
+<!--                android:background="#F6ABAB"-->
+<!--                tools:layout_editor_absoluteX="445dp"-->
+<!--                tools:layout_editor_absoluteY="278dp" />-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
