--- a/app/src/main/res/layout-land/activity_choice_mode_page.xml
+++ b/app/src/main/res/layout-land/activity_choice_mode_page.xml
@@ -32,7 +32,7 @@
             app:srcCompat="@drawable/kobbicon" />
 
         <ImageButton
-            android:id="@+id/btn_User_info_page1"
+            android:id="@+id/btn_User_info_page"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="16dp"
