--- a/app/src/main/res/layout-land/activity_control_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_control_menu_page.xml
@@ -47,9 +47,9 @@
                 android:textColor="#F8F0F0"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page1"
-                app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page1"
-                app:layout_constraintTop_toTopOf="@+id/btn_User_info_page1" />
+                app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page"
+                app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page"
+                app:layout_constraintTop_toTopOf="@+id/btn_User_info_page" />
 
             <TextView
                 android:id="@+id/textView"
@@ -63,7 +63,7 @@
 
             <!-- 개인정보 페이지 이동 버튼  -->
             <ImageButton
-                android:id="@+id/btn_User_info_page1"
+                android:id="@+id/btn_User_info_page"
                 android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
