--- a/app/src/main/res/layout-land/activity_join_page.xml
+++ b/app/src/main/res/layout-land/activity_join_page.xml
@@ -208,7 +208,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <ImageButton
-                android:id="@+id/btn_User_info_page1"
+                android:id="@+id/btn_User_info_page"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
