--- a/app/src/main/res/layout-land/activity_small_menu_page1_5.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page1_5.xml
@@ -127,9 +127,9 @@
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="#00FFFFFF"
-                app:layout_constraintBottom_toBottomOf="@+id/button7"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Choice_mode_page"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/button7"
+                app:layout_constraintTop_toTopOf="@+id/btn_Choice_mode_page"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <!-- 뚜껑 끝 -->
@@ -192,7 +192,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page2" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/btn_Choice_mode_page"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
